edits based on comments